# GraphQL-Django

./: db.sqlite3  pyproject.toml
books/: admin.py  schema.py  urls.py
books/migrations/: 0001_initial.py
core/: settings.py  urls.py
quiz/: admin.py  schema.py  urls.py
quiz/migrations/: 0001_initial.py
